# latam-data-challenge

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
src/: challenge.ipynb  q1_memory.py  q1_time.py  q2_memory.py  q2_time.py  q3_memory.py  q3_time.py
src/.ipynb_checkpoints/: challenge-checkpoint.ipynb  q1_memory-checkpoint.py  q1_time-checkpoint.py  q2_time-checkpoint.py
src/models/: base.py  emoji.py  hashtag.py  media.py  mention.py  tweet.py  user.py
src/utils/: data_loader.py  db_connection.py  db_setup.py  file_utils.py  submit_challenge.py
src/utils/.ipynb_checkpoints/: file_utils-checkpoint.py
